--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation group: 'org.jetbrains.anko', name: 'anko-commons', version: '0.10.8'
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
+    implementation "com.google.code.gson:gson:2.8.5"
+
     implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-alpha09"
     implementation "androidx.navigation:navigation-ui-ktx:2.4.0-alpha09"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
