--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-parcelize'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+
 }
 
 android {
@@ -38,6 +40,11 @@ android {
 }
 
 dependencies {
+    //MAPS
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.android.libraries.places:places:2.5.0'
+
+
     implementation 'com.google.android.material:material:1.3.0-rc01'
     implementation group: 'org.jetbrains.anko', name: 'anko-commons', version: '0.10.8'
     implementation 'com.jakewharton.timber:timber:4.7.1'
