--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs'
 
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -43,6 +44,11 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //Firebase AUTH
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.3'
     //MAPS
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'com.google.android.libraries.places:places:2.5.0'
