--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,10 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
     //Maps
     implementation 'com.google.android.gms:play-services-location:19.0.1'
     //T MDB STUFF
@@ -54,6 +58,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.4'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
 
 
